# hn-search

./: .dockerignore  .env.example  .gitignore  .mise.toml  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: Answer.tsx  ProgressLog.tsx  RecentQueries.tsx  SearchBar.tsx  Sources.tsx
frontend/src/hooks/: useRecentQueries.ts  useSearch.ts  useTheme.ts
hn_search/: cache_config.py  common.py  db_config.py  init_db.py  init_db_pgvector.py  job_manager.py  logging_config.py  query.py  search_backend.py
hn_search/api/: __main__.py  app.py  search.py
hn_search/rag/: cli.py  graph.py  nodes.py  pipeline.py  state.py  web_ui.py
misc/: attach_partitions.py  build_binary_index.py  build_search_artifacts.py  compare_pg_rust.py  cron_update.py  eval_rust_parity.py  fetch_and_embed_new_comments.py  fetch_historical.py  generate_embeddings_gpu.py  gpu_embed.sh  load_embedded_to_partitions.py  optimize_and_create_index.sh  sync_embeddings.sh  verify_artifacts.py
rust-search/: .gitignore  Cargo.toml  README.md
rust-search/deploy/: Caddyfile  hnsearch.service
rust-search/scripts/: rsync_artifacts.sh
rust-search/src/: db.rs  index.rs  main.rs  quantize.rs
