[project]
name = "hn-search"
version = "0.1.0"
description = "Hacker News search using vector embeddings"
requires-python = ">=3.13"
dependencies = [
    "sentence-transformers",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "langgraph",
    "langchain",
    "langchain-openai",
    "python-dotenv",
    "gradio",
    "pyarrow",
    "pandas",
    "psycopg[binary]>=3.0",
    "pgvector",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }
torchaudio = { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



