[project]
name = "hn-search"
version = "0.1.0"
description = "Hacker News search using vector embeddings"
requires-python = ">=3.13"
dependencies = [
    "sentence-transformers",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "langgraph",
    "langchain",
    "langchain-openai",
    "python-dotenv",
    "gradio",
    "pyarrow",
    "pandas",
    "psycopg[binary,pool]>=3.0",
    "pgvector",
    "redis>=6.4.0",
    "langchain-community>=0.3.30",
    "db-dtypes>=1.4.3",
    "google-cloud-bigquery>=3.38.0",
    "html2text>=2025.4.15",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }
torchaudio = { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }

[project.optional-dependencies]
dev = [
    "ruff",
]
prod = [
    "gunicorn>=21.0.0",
    "uvicorn[standard]>=0.24.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hn_search"]



