[project]
name = "hn-search"
version = "0.1.0"
description = "Hacker News search using vector embeddings"
requires-python = ">=3.13"
# Serve path: query embedding runs via ONNX Runtime (no torch). Corpus embedding
# (torch + sentence-transformers) lives in the `dev` extra — see misc/.
dependencies = [
    "onnxruntime>=1.17",
    "huggingface-hub>=0.20",
    "tokenizers>=0.15",
    "numpy",
    "langgraph",
    "langchain",
    "langchain-openai",
    "langchain-community>=0.3.30",
    "python-dotenv",
    "fastapi>=0.115",
    "sse-starlette>=2.1",
    "uvicorn[standard]>=0.24",
    "pyarrow",
    "pandas",
    "psycopg[binary,pool]>=3.0",
    "pgvector",
    "redis>=6.4.0",
    "httpx>=0.27",
]

# NOTE: torch is intentionally unpinned to any index. It is dev-only (serve uses
# ONNX, no torch), so it resolves from PyPI — which gives CUDA-enabled torch on the
# Linux GPU box used for batch embedding, and the right build on macOS for dev.

[project.optional-dependencies]
# Batch embedding generation + data pipeline + tooling. Run with `uv run --extra dev`.
dev = [
    "torch>=2.0.0",
    "sentence-transformers",
    "db-dtypes>=1.4.3",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-bigquery-storage>=2.0.0",
    "html2text>=2025.4.15",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hn_search"]



