[package]
name = "rust-search"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1"
half = "2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
